# equip

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESKTOP_ENHANCEMENTS.md  LICENSE  MIGRATION_REVIEW.md  PACKAGE-03-CONTINUATION.md  PLATFORM_EXPANSION.md  PLATFORM_VERIFICATION.md  PLATFORM_VERIFICATION_RESULTS.md  README.md  SECURITY.md  STATE_MIGRATION_PLAN.md  STATE_REDESIGN.md  index.js  package-lock.json  package.json  registry.json  tsconfig.json
.changeset/: README.md  clean-windows-augments.md  detected-inventory-wrap.md  fix-hooks-test-pollution-and-orphan-sweep.md  gentle-ducks-end.md  loadout-apply-engine.md  loadout-domain-store.md  loadout-preview-planner.md  mcp-resource-server-cutover-pkg-03.md  oidc-wrapped-error-defensive.md  registry-hash-check-non-blocking.md  shy-rivers-restore.md  snapshot-baseline-pruning.md  toml-windows-paths.md
.github/: pull_request_template.md
demo/: README.md  setup.js
docs/: augment-author.md  cli.md  docker-acceptance.md  hooks.md  mcp-registry-compatibility-canary.md  mcp-registry-live-install-spike.md  mcp-servers.md  platforms.md  release-management.md  rules.md  skills.md  snapshots.md  tool-author.md
lib/: cli.js  detect.js  hooks.js  mcp.js  platforms.js
sidecar/: bridge.ts
src/: index.ts
test/: _isolation.js  adoption-single-writer.test.js  adoption-snapshot.test.js  augment-defs.test.js  augment-resolver.test.js  (+74 more)
test/docker/fixtures/mcp-initialize/pypi-stdio-server/: pyproject.toml
test/docker/fixtures/mcp-initialize/pypi-stdio-server/equip_mcp_smoke_pypi/: server.py
(+137 files in other folders)
